--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1> i can push to github</h1>
+    <h2> mama look i can do it</h2>
+    <h3>change code number</h3>
 </body>
 </html>
