--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>My second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> i can push to github</h1>
     <h2> mama look i can do it</h2>
     <h3>change code number</h3>
+    <p> galib mehbub </p>
+    <p> galib mehbub</p>
+
 </body>
 </html>
