--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p> psycho zuxi</p>
     <p>guddu gudugudu</p>
 <p> i love you </p>
-
+<img src="photography.jpg" alt="">
+<img src="galib.jpg" alt="">
 </body>
 </html>
