--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <p> i love you </p>
 <img src="photography.jpg" alt="">
 <img src="galib.jpg" alt="">
+<img src="image/pexels-thom-bradley-5741878.jpg" alt="">
 </body>
 </html>
