--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <p> psycho zuxi</p>
     <p>guddu gudugudu</p>
 <p> i love you </p>
+<p>i am coding coding and coding</p>
 <img src="photography.jpg" alt="">
 <img src="galib.jpg" alt="">
 <img src="image/pexels-thom-bradley-5741878.jpg" alt="">
+<p></p>
 </body>
 </html>
