--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,22 @@
     <title>My second github repo</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1> i can push to github</h1>
+    <h1>Im the king</h1>
     <h2> mama look i can do it</h2>
     <h3>change code number</h3>
     <p> galib mehbub </p>
     <p> galib mehbub</p>
     <p> psycho zuxi</p>
     <p>guddu gudugudu</p>
-<p> i love you </p>
-<p>i am coding coding and coding</p>
-<img src="photography.jpg" alt="">
-<img src="galib.jpg" alt="">
-<img src="image/pexels-thom-bradley-5741878.jpg" alt="">
-<p></p>
+    <p> i love you </p>
+    <p>i am coding coding and coding</p>
+    <img src="photography.jpg" alt="">
+    <img src="galib.jpg" alt="">
+    <img src="image/pexels-thom-bradley-5741878.jpg" alt="">
+    <p></p>
 </body>
+
 </html>
